apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - port: 8000
      targetPort: 8000
